--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "emadadly/laravel-uuid": "^1.2",
         "fideloper/proxy": "^4.0",
         "jeremykenedy/laravel-roles": "^1.7",
+        "kris/laravel-form-builder": "^1.20",
         "lab404/laravel-impersonate": "^1.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
