--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "alexpechkarev/google-maps": "^1.0",
+        "canducci/cep": "^2.0",
+        "codecourse/notify": "^1.1",
         "emadadly/laravel-uuid": "^1.2",
         "fideloper/proxy": "^4.0",
+        "geekcom/validator-docs": "^1.5",
         "jeremykenedy/laravel-roles": "^1.7",
         "kris/laravel-form-builder": "^1.20",
         "lab404/laravel-impersonate": "^1.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravolt/avatar": "^2.2",
+        "okipa/laravel-table": "^1.0",
         "spatie/laravel-activitylog": "^3.5",
         "yadahan/laravel-authentication-log": "^1.1"
     },
