--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^1.0",
         "laravolt/avatar": "^2.2",
         "okipa/laravel-table": "^1.0",
+        "pusher/pusher-php-server": "^3.4",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-activitylog": "^3.5",
         "yadahan/laravel-authentication-log": "^1.1"
