--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "pusher/pusher-php-server": "^3.4",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-activitylog": "^3.5",
+        "webklex/laravel-imap": "^1.4",
         "yadahan/laravel-authentication-log": "^1.1"
     },
     "require-dev": {
