--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
+      - "./php/local.ini:/usr/local/etc/php/php.ini"
     links:
       - mysql
       - webserver
