--- a/php/local.ini
+++ b/php/local.ini
@@ -1,2 +1,5 @@
-upload_max_filesize=40M
-post_max_size=40M
+upload_max_filesize=1024M
+post_max_size=1024M
+max_execution_time=500
+max_file_uploads=2048M
+memory_limit=2048M
