--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "alexpechkarev/google-maps": "^1.0",
         "canducci/cep": "^2.0",
+        "chumper/zipper": "^1.0",
         "codecourse/notify": "^1.1",
         "emadadly/laravel-uuid": "^1.2",
         "fideloper/proxy": "^4.0",
