--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravolt/avatar": "^2.2",
         "okipa/laravel-table": "^1.0",
         "pusher/pusher-php-server": "^4.0",
+        "shalvah/monolog-pusher": "^1.2",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-activitylog": "^3.5",
         "unicodeveloper/laravel-password": "^1.0",
