--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "shalvah/monolog-pusher": "^1.2",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-activitylog": "^3.5",
+        "themsaid/laravel-mail-preview": "^2.0",
         "unicodeveloper/laravel-password": "^1.0",
         "webklex/laravel-imap": "^1.4",
         "yadahan/laravel-authentication-log": "^1.1"
