--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-activitylog": "^3.5",
         "themsaid/laravel-mail-preview": "^2.0",
+        "tylercd100/lern": "^4.5",
         "unicodeveloper/laravel-password": "^1.0",
         "webklex/laravel-imap": "^1.4",
         "yadahan/laravel-authentication-log": "^1.1"
