--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "emadadly/laravel-uuid": "^1.2",
         "fideloper/proxy": "^4.0",
         "geekcom/validator-docs": "^1.5",
+        "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.5",
         "jeremykenedy/laravel-roles": "^1.7",
         "kris/laravel-form-builder": "^1.20",
