--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,15 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+IMAP_HOST=imap.umbler.com
+IMAP_PORT=993
+IMAP_ENCRYPTION=ssl
+IMAP_VALIDATE_CERT=true
+IMAP_USERNAME=notificacao@provider-es.com.br
+IMAP_PASSWORD=@(pITZ48x)Wva
+IMAP_DEFAULT_ACCOUNT=default
+IMAP_PROTOCOL=imap
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -42,3 +51,31 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LARAVEL_MINIFY_HTML=false
+
+# Roles Default Models
+ROLES_DEFAULT_USER_MODEL=App\User
+ROLES_DEFAULT_ROLE_MODEL=jeremykenedy\LaravelRoles\Models\Role
+ROLES_DEFAULT_PERMISSION_MODEL=jeremykenedy\LaravelRoles\Models\Permission
+
+# Roles database information
+ROLES_DATABASE_CONNECTION=null
+ROLES_ROLES_DATABASE_TABLE=roles
+ROLES_ROLE_USER_DATABASE_TABLE=role_user
+ROLES_PERMISSIONS_DATABASE_TABLE=permissions
+ROLES_PERMISSION_ROLE_DATABASE_TABLE=permission_role
+ROLES_PERMISSION_USER_DATABASE_TABLE=permission_user
+
+# Roles Misc Settings
+ROLES_DEFAULT_SEPARATOR='.'
+
+# Roles Database Seeder Settings
+ROLES_SEED_DEFAULT_PERMISSIONS=false
+ROLES_SEED_DEFAULT_ROLES=false
+ROLES_SEED_DEFAULT_RELATIONSHIPS=false
+ROLES_SEED_DEFAULT_USERS=false
+
+SLACK_APP_TOKEN=8FxxPYMFGuArUgXlhWJA4ncF
+SLACK_CHANNEL='#notificacoes'
+SLACK_USERNAME=LERN
