--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "fideloper/proxy": "^4.0",
         "geekcom/validator-docs": "^1.5",
         "guzzlehttp/guzzle": "^6.3",
+        "inspector-apm/inspector-laravel": "^2.4",
         "intervention/image": "^2.5",
         "jeremykenedy/laravel-roles": "^1.7",
         "kris/laravel-form-builder": "^1.20",
