--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravolt/avatar": "^2.2",
+        "league/flysystem-sftp": "^1.0",
         "nexmo/laravel-notification": "^0.2.1",
         "okipa/laravel-table": "^1.0",
         "pusher/pusher-php-server": "^4.0",
