--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "league/flysystem-sftp": "^1.0",
         "nexmo/laravel-notification": "^0.2.1",
         "okipa/laravel-table": "^1.0",
+        "pcrov/jsonreader": "^1.0",
         "pusher/pusher-php-server": "^4.0",
         "shalvah/monolog-pusher": "^1.2",
         "simplesoftwareio/simple-qrcode": "^2.0",
