melhorias na aplicação

--- a/.env-prod
+++ b/.env-prod
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=mysql669.umbler.com
 DB_PORT=41890
-DB_DATABASE=providerdb
-DB_USERNAME=provider
-DB_PASSWORD=a(|ip2Hc7R+l
+DB_DATABASE=providersipdb
+DB_USERNAME=providersip
+DB_PASSWORD=r|(CxHmzwOt35
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
