--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "alexpechkarev/google-maps": "^1.0",
+        "arrilot/laravel-widgets": "^3.13",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "canducci/cep": "^2.0",
         "chumper/zipper": "^1.0",
