Ajustes em Chamados

--- a/.env-dev
+++ b/.env-dev
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=email-ssl.com.br
 MAIL_PORT=587
-MAIL_USERNAME=cezzaar@gmail.com
-MAIL_PASSWORD=Cesar1507
+MAIL_USERNAME=notificacao@provider-es.com.br
+MAIL_PASSWORD=@(pITZ48x)Wva
 MAIL_ENCRYPTION=tls
 
 IMAP_HOST=imap.gmail.com
