--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "alexpechkarev/google-maps": "^1.0",
         "arrilot/laravel-widgets": "^3.13",
+        "barryvdh/laravel-cors": "^0.11.4",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "canducci/cep": "^2.0",
         "chumper/zipper": "^1.0",
